Revision history for {{$dist->name}}

{{$NEXT}}

0.83      2014-06-11 08:33:59 -0400
  - add Alien::bz2::Installer
  - update my dists to latest

0.82      2014-06-10 22:22:39 -0400
  - update my dists to latest

0.81      2014-06-10 16:30:09 -0400
  - updated Archive::Ar::Libarchive to latest
    missed it in last release

0.80      2014-06-10 16:28:22 -0400
  - update my dists to latest
  - rm Alien::Libarchive::MSWin32
  - add Alien::Libarchive::Installer

0.79      2014-05-31 06:41:45 -0400
  - update my dists to latest

0.78      2014-05-29 07:48:22 -0400
  - update my dists to latest
  - added App::spaceless

0.77      2014-05-27 07:59:36 -0400
  - add Dist::Zilla::Plugin::Meta::Dynamic::Config
  - add Dist::ZIlla::Plugin::PPPort
  - add Monkey::Patch
  - add Pod::Abstract
  - add Test::CPAN::Changes
  - add Test::Vars

0.76      2014-05-24 08:26:25 -0400
  - migrate to Module::Build
  - update my dists to latest

0.75      2014-05-15 11:53:20 -0400
  - don't install Archive::Libarchive::FFI on MSWin32
  - added Win32::Shortcut::Readlink
  - update my dists to latest

0.74      2014-04-17 07:53:18 -0400
  - update my dists to latest

0.73      2014-04-07 13:25:05 -0400
  - Yars is now required (and supported) on MSWin32
  - update my dists to latest
  - add some of my dists that weren't there yet (e.g. Archive::Libarchive::*)

0.72      2014-02-22 06:34:05 -0500
  - rm AnyEvent::WebSocket::Server

0.71      2014-01-26 21:00:31 -0500
  - rm App::Ack

0.70      2014-01-09 14:02:48 -0500
  - rm Mojolicious::Plugin::RenderFile

0.69      2013-12-30 15:11:31 -0500
  - rm App::cpangitify on MSWin32 only
  - rm WWW::Bugzilla::BugTree on MSWin32 only

0.68      2013-12-28 08:35:40 -0500
  - update my modules to latest
  - include Dist::Zilla plugins

0.67      2013-11-05 12:48:22 -0500
  - update my modules to latest

0.66      2013-10-22 06:56:54 -0400
  - added AnyEvent::WebSocket::Server
  - update modules to latest

0.65      2013-10-16 14:31:12 -0400