@@ -50,7 +50,6 @@ Dist::Zilla::Plugin::MathInt64                 = 0.06
 ;Dist::Zilla::Plugin::ModuleBuildDatabase      = 0.05
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::Plugin::TwitterBootstrap          = 0.04
 Dist::Zilla::PluginBundle::ACPS                = 0.28
 Dist::Zilla::PluginBundle::Author::Plicease    = 1.50
 FFI::Util                                      = 0.07
@@ -76,11 +75,14 @@ Test::Clustericious::Cluster                   = 0.16
 Test::Fixme                                    = 0.10
 URI::ws                                        = 0.03
 WebService::LiveJournal                        = 0.07
-WebService::TwitterBootstrap::Download::Custom = 0.03
 Win32::Shortcut::Readlink                      = 0.02
 WWW::Bugzilla::BugTree                         = 0.03
 Yars                                           = 1.00
 Yars::Client                                   = 0.94
+
+; retired
+;Dist::Zilla::Plugin::TwitterBootstrap          = 0.04
+;WebService::TwitterBootstrap::Download::Custom = 0.03
 
 AnyEvent                                       = 0
 App::cpanminus                                 = 0
